--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,46 @@
     </head>
     <body class="bg-[#120f0d]">
         <div
-            class="max-w-6xl mx-auto px-6 py-5 border-b-1 border-zinc-800 border-l-1 border-r-1"
+            class="max-w-6xl mx-auto px-6 py-5 border-b-1 border-slate-700 border-l-1 border-r-1"
         >
             <h1 class="text-2xl font-bold font-mono text-white">grian.dev</h1>
         </div>
+        <div
+            class="max-w-6xl mx-auto px-6 py-5 border-b-1 border-slate-700 border-l-1 border-r-1"
+        >
+        <p class="text-lg font-mono text-white">
+            Hi! I'm grian, a CS Student with an interest in Game & Language development.
+        </p>
+        </div>
+        <div
+            class="max-w-6xl mx-auto px-6 py-5 border-b-1 border-slate-700 border-l-1 border-r-1"
+        >
+            <h1 class="text-xl font-italic font-mono text-white border-b-2 border-slate-500 inline-block px-2">
+                My Projects
+            </h1>
+            <div class="grid grid-cols-2 mt-6">
+                <div class="border-r border-slate-700 p-4">
+                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+1" alt="Project 1" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">Project One</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                </div>
+                <div class="p-4">
+                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+2" alt="Project 2" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">Project Two</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                </div>
+                <div class="border-r border-t border-slate-700 p-4">
+                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+3" alt="Project 3" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">Project Three</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                </div>
+                <div class="border-t border-slate-700 p-4">
+                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+4" alt="Project 4" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">Project Four</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
