feat: add project description/images

--- a/html/index.html
+++ b/html/index.html
@@ -25,27 +25,26 @@
             </h1>
             <div class="grid grid-cols-2 mt-6">
                 <div class="border-r border-slate-700 p-4">
-                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+1" alt="Project 1" class="w-full rounded mb-3" />
-                    <h2 class="text-lg font-bold font-mono text-white">Project One</h2>
-                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                    <img src="static/grpg.png" alt="GRPG" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">GRPG</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">An MMO Engine/Game written in Go using Ebiten.</p>
                 </div>
                 <div class="p-4">
-                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+2" alt="Project 2" class="w-full rounded mb-3" />
-                    <h2 class="text-lg font-bold font-mono text-white">Project Two</h2>
-                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                    <img src="static/grianlang3.png" alt="grianlang3" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">grianlang3</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">An LLVM-based compiler for a C-style language.</p>
                 </div>
                 <div class="border-r border-t border-slate-700 p-4">
-                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+3" alt="Project 3" class="w-full rounded mb-3" />
-                    <h2 class="text-lg font-bold font-mono text-white">Project Three</h2>
-                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                    <img src="static/betamod.png" alt="Grian's Beta Expansion" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">Grian's Beta Expansion</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">A Minecraft b1.7.3 mod that expands various parts of the game</p>
                 </div>
                 <div class="border-t border-slate-700 p-4">
-                    <img src="https://placehold.co/600x300/1e1b18/white?text=Project+4" alt="Project 4" class="w-full rounded mb-3" />
-                    <h2 class="text-lg font-bold font-mono text-white">Project Four</h2>
-                    <p class="text-sm font-mono text-slate-400 mt-1">A short description of what this project is about.</p>
+                    <img src="https://placehold.co/600x300/1e1b18/white?text=Coming+Soon" alt="Coming Soon" class="w-full rounded mb-3" />
+                    <h2 class="text-lg font-bold font-mono text-white">...</h2>
+                    <p class="text-sm font-mono text-slate-400 mt-1">...</p>
                 </div>
             </div>
         </div>
-
     </body>
 </html>
