feat: line up text on each card row

--- a/html/index.html
+++ b/html/index.html
@@ -25,22 +25,32 @@
             </h1>
             <div class="grid grid-cols-2 mt-6">
                 <div class="border-r border-slate-700 p-4">
-                    <img src="static/grpg.png" alt="GRPG" class="w-full rounded mb-3" />
+                    <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
+                        <img src="static/grpg.png" alt="GRPG" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                    </div>
                     <h2 class="text-lg font-bold font-mono text-white">GRPG</h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">An MMO Engine/Game written in Go using Ebiten.</p>
                 </div>
                 <div class="p-4">
-                    <img src="static/grianlang3.png" alt="grianlang3" class="w-full rounded mb-3" />
+                    <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
+                        <img src="static/grianlang3.png" alt="grianlang3" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                    </div>
                     <h2 class="text-lg font-bold font-mono text-white">grianlang3</h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">An LLVM-based compiler for a C-style language.</p>
                 </div>
+            </div>
+            <div class="grid grid-cols-2">
                 <div class="border-r border-t border-slate-700 p-4">
-                    <img src="static/betamod.png" alt="Grian's Beta Expansion" class="w-full rounded mb-3" />
+                    <div style="width:100%;height:0;padding-bottom:54%;position:relative;margin-bottom:0.75rem;">
+                        <img src="static/betamod.png" alt="Grian's Beta Expansion" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                    </div>
                     <h2 class="text-lg font-bold font-mono text-white">Grian's Beta Expansion</h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">A Minecraft b1.7.3 mod that expands various parts of the game</p>
                 </div>
                 <div class="border-t border-slate-700 p-4">
-                    <img src="https://placehold.co/600x300/1e1b18/white?text=Coming+Soon" alt="Coming Soon" class="w-full rounded mb-3" />
+                    <div style="width:100%;height:0;padding-bottom:54%;position:relative;margin-bottom:0.75rem;">
+                        <img src="https://placehold.co/600x300/1e1b18/white?text=Coming+Soon" alt="Coming Soon" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                    </div>
                     <h2 class="text-lg font-bold font-mono text-white">...</h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">...</p>
                 </div>
