feat: add links to each project on each card

--- a/html/index.html
+++ b/html/index.html
@@ -25,26 +25,32 @@
             </h1>
             <div class="grid grid-cols-2 mt-6">
                 <div class="border-r border-slate-700 p-4">
-                    <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
-                        <img src="static/grpg.png" alt="GRPG" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
-                    </div>
-                    <h2 class="text-lg font-bold font-mono text-white">GRPG</h2>
+                    <a href="https://github.com/grian32/grpg">
+                        <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
+                            <img src="static/grpg.png" alt="GRPG" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                        </div>
+                    </a>
+                    <h2 class="text-lg font-bold font-mono text-white"><a href="https://github.com/grian32/grpg">GRPG</a></h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">An MMO Engine/Game written in Go using Ebiten.</p>
                 </div>
                 <div class="p-4">
-                    <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
-                        <img src="static/grianlang3.png" alt="grianlang3" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
-                    </div>
-                    <h2 class="text-lg font-bold font-mono text-white">grianlang3</h2>
+                    <a href="https://github.com/grian32/grianlang3">
+                        <div style="width:100%;height:0;padding-bottom:86%;position:relative;margin-bottom:0.75rem;">
+                            <img src="static/grianlang3.png" alt="grianlang3" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                        </div>
+                    </a>
+                    <h2 class="text-lg font-bold font-mono text-white"><a href="https://github.com/grian32/grianlang3">grianlang3</a></h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">An LLVM-based compiler for a C-style language.</p>
                 </div>
             </div>
             <div class="grid grid-cols-2">
                 <div class="border-r border-t border-slate-700 p-4">
-                    <div style="width:100%;height:0;padding-bottom:54%;position:relative;margin-bottom:0.75rem;">
-                        <img src="static/betamod.png" alt="Grian's Beta Expansion" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
-                    </div>
-                    <h2 class="text-lg font-bold font-mono text-white">Grian's Beta Expansion</h2>
+                    <a href="https://grian32.github.io/beta-mod/docs/intro/">
+                        <div style="width:100%;height:0;padding-bottom:54%;position:relative;margin-bottom:0.75rem;">
+                            <img src="static/betamod.png" alt="Grian's Beta Expansion" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:contain;object-position:top left;" />
+                        </div>
+                    </a>
+                    <h2 class="text-lg font-bold font-mono text-white"><a href="https://grian32.github.io/beta-mod/docs/intro/">Grian's Beta Expansion</a></h2>
                     <p class="text-sm font-mono text-slate-400 mt-1">A Minecraft b1.7.3 mod that expands various parts of the game</p>
                 </div>
                 <div class="border-t border-slate-700 p-4">
